--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projecto DSNovie</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css"
+        integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-   <h1>Olá DSMovie</h1>
-   <h2>Promoções de final de samana</h2>
-    
+    <header>
+        <nav class="container">
+
+            <h1>DSMOVE</h1>
+
+            <!--
+          alt = nome que ira aparacer caso a imgame não apareça
+       -->
+            <div class="dsmovie-contact-container">
+                <img src="img/github" alt="github">
+                <a href="https://github.com/MADUREIRA1990/Projecto_DSMove">ProjectoDSMove</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="dsmovie-card-list" classe="container">
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg"
+                    alt="the witcher">
+                <div class="dsmovie-card-description">
+                    <h3>The Witcher</h3>
+                    <a class="dsmovie-btn"href="form.html">Avaliar</a>
+
+                </div>
+
+
+            </div>
+
+        </section>
+    </main>
 </body>
+
 </html>
-
-
-
-
-
-
-
